Lagt til auth tester for arena innsyn api.
